@@ -662,10 +662,10 @@ void fprintDifxAntennaSummary(FILE *fp, const DifxAntenna *da);
 int isSameDifxAntenna(const DifxAntenna *da1, const DifxAntenna *da2);
 int isSameDifxAntennaClock(const DifxAntenna *da1, const DifxAntenna *da2);
 int getDifxAntennaShiftedClock(const DifxAntenna *da, double dt, int outputClockSize, double *clockOut);
+double evaluateDifxAntennaClock(const DifxAntenna *da, double mjd);
 void copyDifxAntenna(DifxAntenna *dest, const DifxAntenna *src);
 DifxAntenna *mergeDifxAntennaArrays(const DifxAntenna *da1, int nda1,
-	const DifxAntenna *da2, int nda2, int *antennaIdRemap,
-	int *nda);
+	const DifxAntenna *da2, int nda2, int *antennaIdRemap, int *nda);
 int writeDifxAntennaArray(FILE *out, int nAntenna, const DifxAntenna *da,
         int doMount, int doOffset, int doCoords, int doClock, int doShelf);
 
